# code-rag

./: .gitignore  Design.md  README.md  install.ps1  install.sh  pyproject.toml
src/code_rag/: __main__.py  cli.py  config.py  models.py  server.py
src/code_rag/indexer/: chunker.py  discovery.py  embedder.py  parser.py  pipeline.py
src/code_rag/retriever/: hybrid.py  keyword.py  semantic.py
src/code_rag/storage/: bm25_store.py  browse_db.py  metadata.py  ripgrep.py  vector_store.py
tests/: conftest.py  test_bm25_store.py  test_metadata_store.py  test_parser.py  test_vector_store.py
tests/mcp_smoke/: README.txt  __init__.py  artifacts.py  fixture_repo.py  index_runtime.py  test_mcp_smoke.py  tool_runner.py
